--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   bloc: ^9.0.0
   google_sign_in: ^7.2.0
   flutter_facebook_auth: ^7.1.2
+  http: ^1.5.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
