--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_facebook_auth: ^7.1.2
   http: ^1.5.0
   uuid: ^4.5.1
+  convex_bottom_bar: ^3.2.0
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
