--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   uuid: ^4.5.1
   convex_bottom_bar: ^3.2.0
   curved_navigation_bar: ^1.0.6
+  shimmer: ^3.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
